<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Random Golf Quiz</string>
    <string name="name_hint">Your Name</string>

    <string name="question_1">Q1:  How many dimples are on a 2017 Titleist Pro V1 golf ball?</string>
    <string name="dimples_choice_1">328</string>
    <string name="dimples_choice_2">352</string>
    <string name="dimples_choice_3">386</string>

    <string name="question_2">Q2:  What is Tiger Woods\' real first name?</string>

    <string name="question_3">Q3:  Which of these players has won the Masters?</string>
    <string name="masters_choice_1">Lee Trevino</string>
    <string name="masters_choice_2">Tiger Woods</string>
    <string name="masters_choice_3">Ernie Els</string>
    <string name="masters_choice_4">Horton Smith</string>

    <string name="question_4">Q4:  What is a typical loft angle for a 7 iron?</string>
    <string name="degrees_hint">"Number in degrees"</string>

    <string name="submit_button">Submit</string>

    <string name="score_message">Hey <xliff:g id="name" example="Brian">%s</xliff:g>!  You\'re score is <xliff:g id="score" example="2">%d</xliff:g> of 4.</string>

</resources>